Fixed "Tooltip on wrong positions in complex layouts"

--- a/css/d3-force-1.4.1.css
+++ b/css/d3-force-1.4.1.css
@@ -2,6 +2,7 @@
 .net_gobrechts_d3_force_customize,
 .net_gobrechts_d3_force_customize td,
 .net_gobrechts_d3_force_tooltip {
+    box-sizing: content-box;
     font-family: Arial, Helvetica, Sans Serif;
     font-size: 10px;
 }
